[gd_scene load_steps=42 format=3 uid="uid://cpr0y5k8k2kgj"]

[ext_resource type="Script" path="res://Scripts/States/StateMachine.gd" id="1_435rg"]
[ext_resource type="Script" path="res://Scenes/player/player.gd" id="1_gp0yp"]
[ext_resource type="Script" path="res://Scripts/States/PlayerIdle.gd" id="2_66bxp"]
[ext_resource type="Texture2D" uid="uid://p6chnoentvn7" path="res://Sprites/Mages Character Pack by RgsDev/Mage 2/16x16 Mage 2.png" id="4_fvahh"]
[ext_resource type="Script" path="res://Scripts/States/PlayerMove.gd" id="4_gmyaw"]
[ext_resource type="Script" path="res://Scripts/States/Cast.gd" id="5_lstil"]
[ext_resource type="Script" path="res://Scripts/States/damage.gd" id="6_e403r"]
[ext_resource type="Script" path="res://Scripts/SpellCaster.gd" id="7_aw5ht"]
[ext_resource type="Script" path="res://Scenes/player/Death.gd" id="7_ntvts"]
[ext_resource type="FontFile" uid="uid://dps78ri75duno" path="res://Font/PixelOperator8.ttf" id="8_n785n"]
[ext_resource type="Texture2D" uid="uid://cqp3ura14n7ks" path="res://Sprites/flashlight_reverse.png" id="9_h1ujj"]
[ext_resource type="Script" path="res://Scenes/player/AimingLine.gd" id="12_en663"]
[ext_resource type="AudioStream" uid="uid://86bl4nq6ymup" path="res://Sounds/possible_damage_two.wav" id="13_0r2mo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v3534"]
atlas = ExtResource("4_fvahh")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3p8d"]
atlas = ExtResource("4_fvahh")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fplit"]
atlas = ExtResource("4_fvahh")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn381"]
atlas = ExtResource("4_fvahh")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgl85"]
atlas = ExtResource("4_fvahh")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_un5j2"]
atlas = ExtResource("4_fvahh")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq4fo"]
atlas = ExtResource("4_fvahh")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq8md"]
atlas = ExtResource("4_fvahh")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jslj2"]
atlas = ExtResource("4_fvahh")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8vf6"]
atlas = ExtResource("4_fvahh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lg33"]
atlas = ExtResource("4_fvahh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7e8c"]
atlas = ExtResource("4_fvahh")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kuaq"]
atlas = ExtResource("4_fvahh")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6oeg"]
atlas = ExtResource("4_fvahh")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_som2i"]
atlas = ExtResource("4_fvahh")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_psy58"]
atlas = ExtResource("4_fvahh")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd7km"]
atlas = ExtResource("4_fvahh")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1eahm"]
atlas = ExtResource("4_fvahh")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_osmck"]
atlas = ExtResource("4_fvahh")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8cji"]
atlas = ExtResource("4_fvahh")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6xw7"]
atlas = ExtResource("4_fvahh")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y0jm"]
atlas = ExtResource("4_fvahh")
region = Rect2(448, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_brvva"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3534")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3p8d")
}],
"loop": false,
"name": &"cast_spell",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fplit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn381")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fplit")
}],
"loop": false,
"name": &"damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgl85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un5j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq4fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq8md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jslj2")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8vf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lg33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7e8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kuaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6oeg")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_som2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psy58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd7km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1eahm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osmck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8cji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6xw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y0jm")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j7h4y"]
radius = 7.0

[sub_resource type="Theme" id="Theme_oa0th"]

[sub_resource type="Animation" id="Animation_p2rtu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.24]
}

[sub_resource type="Animation" id="Animation_ukjto"]
resource_name = "light_flicker"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.1, 0.3, 0.242857, 0.185714, 0.128571]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.24, 0.45, 0.5, 0.1, 0.24]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6648b"]
_data = {
"RESET": SubResource("Animation_p2rtu"),
"light_flicker": SubResource("Animation_ukjto")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(4, 4)
collision_mask = 29
script = ExtResource("1_gp0yp")

[node name="AimingLine" type="Line2D" parent="."]
position = Vector2(1, -8)
points = PackedVector2Array(0, 0)
width = 1.0
default_color = Color(1, 0.415686, 0.196078, 1)
script = ExtResource("12_en663")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("1_435rg")
initial_state = NodePath("Move")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("2_66bxp")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("4_gmyaw")

[node name="Cast" type="Node" parent="StateMachine"]
script = ExtResource("5_lstil")

[node name="Damage" type="Node" parent="StateMachine"]
script = ExtResource("6_e403r")

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource("7_ntvts")

[node name="CharacterAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -16)
sprite_frames = SubResource("SpriteFrames_brvva")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -8)
scale = Vector2(1, 0.60263)
shape = SubResource("CapsuleShape2D_j7h4y")

[node name="Timers" type="Node" parent="."]

[node name="InvulnerabilityTimer" type="Timer" parent="Timers"]
wait_time = 0.6
one_shot = true

[node name="StunlockTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="SpellCaster" type="Node" parent="."]
script = ExtResource("7_aw5ht")

[node name="CastingText" type="Label" parent="."]
modulate = Color(0.85098, 0.294118, 0.270588, 1)
offset_left = -33.0
offset_top = -42.0
offset_right = 37.0
offset_bottom = -19.0
theme = SubResource("Theme_oa0th")
theme_override_fonts/font = ExtResource("8_n785n")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -10)
color = Color(1, 0.631373, 0.101961, 1)
energy = 0.25
texture = ExtResource("9_h1ujj")
texture_scale = 0.24

[node name="AnimationPlayer" type="AnimationPlayer" parent="PointLight2D"]
libraries = {
"": SubResource("AnimationLibrary_6648b")
}
autoplay = "light_flicker"

[node name="Sounds" type="Node2D" parent="."]

[node name="DamageNoise" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2(1, -8)
stream = ExtResource("13_0r2mo")

[connection signal="CastSpell" from="StateMachine/Cast" to="SpellCaster" method="_on_cast_cast_spell"]
[connection signal="timeout" from="Timers/InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
[connection signal="timeout" from="Timers/StunlockTimer" to="." method="_on_stunlock_timer_timeout"]
[connection signal="timeout" from="Timers/StunlockTimer" to="StateMachine/Damage" method="_on_stunlock_timer_timeout"]
[connection signal="spell_cast" from="SpellCaster" to="." method="_on_spell_caster_spell_cast"]
